Fix ASSERTION FAILED: !m_pendingNavigationID in WebPage::reload(). https://bugs.webkit.org/show_bug.cgi?id=146546

Patch by Hyungwook Lee <hyungwook.lee@navercorp.com> on 2015-07-08
Reviewed by Darin Adler.

We did't reset pendingNavigationID value when request url is empty.
Hence we need to ignore ASSERT check in this case.

Source/WebKit2:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::reload):

Tools:

* TestWebKitAPI/Tests/WebKit2/PageLoadBasic.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/164847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186570 268f45cc-cd09-0410-ab3c-d52691b4dbfc